[tool.poetry]
name = "pingbot"
version = "0.1.0"
description = ""
authors = ["Dmitry Kolomatskiy <58207913+lemontree210@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^21.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
