[tool.poetry]
name = "pingbot"
version = "0.1.0"
description = ""
authors = ["Dmitry Kolomatskiy <58207913+lemontree210@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["job-queue"], version = "^21.6"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
